--- a/Biologia.html
+++ b/Biologia.html
@@ -11,10 +11,14 @@
     <div class="contenedor">
 <div class="encabezado">
 
-    Tecnologia e Informatica
+    Biologia
 </div>
        
 <div class="menu">
+    <div class="tecnologia">
+
+        <a href="index.html">Tecnologia</a>
+     </div>   
 <div class="sociales">
 <a href="Sociales.html">Sociales</a>
 
